More account stuff: save conflict as, fix flickering icons, deletion conflicts

--- a/packages/common-ui/styles/common.less
+++ b/packages/common-ui/styles/common.less
@@ -1234,9 +1234,9 @@ job-picker {
       }
 
       td[col-id="syncstatus"] {
-        width: 50px;
-        min-width: 50px;
-        max-width: 50px;
+        width: 35px;
+        min-width: 35px;
+        max-width: 35px;
       }
     }
   }
